# wasm-exec-sgx

./: .gitignore  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
enclave/src/: lib.rs
examples/: Makefile
examples/as-median/: Makefile  package-lock.json  package.json
examples/as-median/assembly/: index.ts
get-mean-float-wasm/: Cargo.toml  Makefile  test_data.json
get-mean-float-wasm/src/: lib.rs
get-mean-int-wasm/: Cargo.toml  Makefile  test_data.json
get-mean-int-wasm/src/: lib.rs
get-mean-wasm/: Cargo.toml  Makefile  rust-toolchain.toml  test_data.json
get-mean-wasm/src/: lib.rs
get-median-float-wasm/: Cargo.toml  Makefile  test_data.json
get-median-float-wasm/src/: lib.rs
get-median-int-wasm/: Cargo.toml  Makefile  test_data.json
get-median-int-wasm/src/: lib.rs
get-median-wasm/: Cargo.toml  Makefile  test_data.json
get-median-wasm/.cargo/: config.toml
get-median-wasm/src/: lib.rs
get-sd-float-wasm/: Cargo.toml  Makefile
get-sd-float-wasm/src/: lib.rs
get-sd-int-wasm/: Cargo.toml  Makefile
get-sd-int-wasm/src/: lib.rs
get-sd-wasm/: Cargo.toml  Makefile  rust-toolchain.toml  test_data.json
get-sd-wasm/src/: lib.rs
test_data/: 1_test_data.json  1_test_schema.json  2_test_data.json  2_test_schema.json
wasm-append/: Cargo.toml  Makefile
wasm-append/src/: lib.rs
wasmi-impl/: Cargo.toml
wasmi-impl/src/: lib.rs
