[package]
name = "app"
version = "1.0.0"
authors = ["Teaclave"]
build = "build.rs"

[dependencies] # You can specify the features you need for urts, such as global_exit and global_init
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
wabt = "0.10.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
