[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
wasmi-impl = { path = "../wasmi-impl" }
wasmi = { version = "0.11.0", default-features = false }
serde-json-wasm = "0.3.2"

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"], rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']