[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "sample" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
wasmi-impl = { path = "../wasmi-impl" }
wasmi = { version = "0.11.0", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] , rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2"  }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }
sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2"  }
sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" , rev = "27bd225ae6dbcd1d0a6d4d9590acc4d73c5195c2" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
