[package]
name = "get-median-float-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ['cdylib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-json-wasm = "0.3.2"
# serde-json-core = "0.4.0"
serde = "1.0"
serde_json = "1.0"
# serde_derive = { version = "1.0.133", default-features = false }
# serde = { version = "1.0.133", default-features = false }

[profile.release]
lto = true
opt-level = 's'
